--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 #screengame {
-  background-image: url(/images-jeu/background.jpg);
+  background-image: url("./images-jeu/background.jpg");
   width: 100%;
   background-position: center;
   background-size: cover;
